commit to merge master

--- a/app/views/photographers/index.html.erb
+++ b/app/views/photographers/index.html.erb
@@ -1,9 +1,10 @@
 this is where I'm working
 
+<div class="container">
 <div class="row justify-content-center">
   <% @photographers.each do |photographer| %>
-     photographer.name
+    <%= photographer.name %>
+      <% end %>
       </div>
     </div>
-  <% end %>
 </div>
