created new and edit views with form partial, fixed some things in photographer controller and policy

--- a/app/views/photographers/edit.html.erb
+++ b/app/views/photographers/edit.html.erb
@@ -1,4 +1,4 @@
 <div class="container py-3">
-  <h1>Create a new Photographer's Profile</h1>
+  <h1>Edit your Photographer's Profile</h1>
   <%= render 'form', photographer: @photographer %>
 </div>
