corrected overall layout

--- a/app/views/partials/_navbar.html.erb
+++ b/app/views/partials/_navbar.html.erb
@@ -1,11 +1,11 @@
 <div class="navbar navbar-expand-sm navbar-light navbar-lewagon">
     <div class="d-flex">
-      <a class="navbar-brand" href="#">
+      <a class="navbar-brand" href="/">
           <%= image_tag "photologo.png", class: "navbar-logo"%> Top Shots <!--Logo!-->
       </a>
     <ul class="navbar-nav mr-auto">
       <li class="nav-item active">
-        <a class="nav-link" href="#">Find a Photographer</a>
+        <a class="nav-link" href="/photographers">Find a Photographer</a>
       </li>
 
       <li class="nav-item active">
@@ -23,8 +23,8 @@
 
    <ul class="navbar-nav mr-auto">
       <li class="nav-item active">
-        <a type="button" class="btn btn-outline-dark" class="nav-link" href="#">Log in</a>
-        <a type="button" class="btn btn-dark" class="nav-link" href="#">Sign up</a>
+        <a type="button" class="btn btn-outline-dark" class="nav-link" href="/users/sign_in">Log in</a>
+        <a type="button" class="btn btn-dark" class="nav-link" href="/users/sign_up">Sign up</a>
       </li>
 
 
