--- a/app/views/partials/_card.html.erb
+++ b/app/views/partials/_card.html.erb
@@ -1,5 +1,5 @@
 <div class="card">
-  <%= image_tag("https://picsum.photos/300/200") %>
+  <%= image_tag("https://picsum.photos/id/#{rand(1000)}/300/200") %>
   <div class="card-infos">
     <div>
       <h2><%= photographer.name %></h2>
