changed overall font and added btn-font class so all buttons are with Montserrat

--- a/app/views/partials/_navbar.html.erb
+++ b/app/views/partials/_navbar.html.erb
@@ -23,8 +23,8 @@
 
    <ul class="navbar-nav mr-auto">
       <li class="nav-item active">
-        <a type="button" class="btn btn-outline-dark" class="nav-link" href="/users/sign_in">Log in</a>
-        <a type="button" class="btn btn-dark" class="nav-link" href="/users/sign_up">Sign up</a>
+        <a type="button" class="btn btn-outline-dark btn-font" class="nav-link" href="/users/sign_in">Log in</a>
+        <a type="button" class="btn btn-dark btn-font" class="nav-link" href="/users/sign_up">Sign up</a>
       </li>
 
 
