--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -43,13 +43,6 @@
   width: 40px;
 }
 
-.avatar-bordered {
-  width: 40px;
-  border-radius: 50%;
-  box-shadow: 0 1px 2px rgba(0,0,0,0.2);
-  border: white 1px solid;
-}
-
 .card-link {
   text-decoration: none;
   color: black;
@@ -58,3 +51,30 @@
 .card-link:hover {
   color: #343A40;
 }
+
+.card-horizontal {
+  display: flex;
+  padding: 10px 20px;
+  margin-bottom: 50px;
+  background: white;
+  box-shadow: 0 0 15px rgba(0,0,0,0.2);
+  align-items: center;
+  max-width: 600px;
+}
+
+.card-horizontal-parcel {
+  margin-right: 20px;
+  p {
+    margin: 0;
+  }
+}
+
+.card-horizontal-center {
+  flex-grow: 1;
+}
+
+.card-horizontal-icon {
+  font-size: 20px;
+  color: $dark-gray;
+}
+
