--- a/app/views/photographers/_form.html.erb
+++ b/app/views/photographers/_form.html.erb
@@ -6,6 +6,6 @@
   <div>
     <%= f.button :submit, class: "btn btn-dark" %>
     <!-- Think where you want the Cancel to redirect to -->
-    <%= link_to 'Cancel', photographers_path, class: "btn btn-outline-dark ml-3"%>
+    <%= link_to 'Cancel', profile_path, class: "btn btn-outline-dark ml-3"%>
   </div>
 <% end %>
