--- a/app/views/photographers/show.html.erb
+++ b/app/views/photographers/show.html.erb
@@ -1,14 +1,15 @@
-<!-- <div style="background-image: url('https://images.unsplash.com/photo-1536632087471-3cf3f2986328?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1655&q=80')"></div> -->
-
-<div class="container margin-top-negative">
+<div class="banner_profile" style="background-image: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4)), url('https://images.unsplash.com/photo-1536632087471-3cf3f2986328?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1655&q=80')"></div>
+ <img src="https://kitt.lewagon.com/placeholder/users/random" class="avatar-xl avatar_profile" />
+<div class="container" id="content_profile"> <!-- margin-top-negative -->
   <div class="row">
     <div class="col-8">
       <div>
         <h1><%= @photographer.name %></h1>
-        <p><%= @photographer.location %></p>
+        <p><i class="fa fa-map-pin mr-2" aria-hidden="true"></i><%= @photographer.location %></p>
       </div>
+
       <div>
-        <h3>A bit more about this photographer...</h3>
+        <h4>A bit more about this photographer...</h4>
         <p><%= @photographer.description %></p>
       </div>
     </div>
