--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -55,7 +55,7 @@
 .card-horizontal {
   display: flex;
   padding: 10px 20px;
-  margin-bottom: 50px;
+  margin: 40px 0;
   background: white;
   box-shadow: 0 0 15px rgba(0,0,0,0.2);
   align-items: center;
