--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -60,6 +60,7 @@
   box-shadow: 0 0 15px rgba(0,0,0,0.2);
   align-items: center;
   max-width: 600px;
+  border-radius: 3px;
 }
 
 .card-horizontal-parcel {
