--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,9 +13,9 @@
 
   <body>
     <%= render "partials/navbar" %>
-
+    <div class = "page" style = "min-height:75vh;">
     <%= yield %>
-
+    </div>
     <%= render "partials/footer" %>
   </body>
 </html>
