--- a/app/views/photographers/show.html.erb
+++ b/app/views/photographers/show.html.erb
@@ -19,22 +19,22 @@
         <h5>Book this photographer!</h5>
 
         <form action="">
-          <div class="input-group">
-            <span class="input-group-addon" id="basic-addon1">From:</span>
-            <input type="text" class="form-control" placeholder="12/10/2017" aria-label="Username" aria-describedby="basic-addon1">
+          <div class="input-group mt-4">
+            <span class="input-group-addon" id="basic-addon1">Date:</span>
+            <input type="text" class="form-control ml-5" placeholder="12/10/2017" aria-label="Username" aria-describedby="basic-addon1">
           </div>
           <div class="input-group mt-2">
-            <span class="input-group-addon" id="basic-addon1">To:</span>
-            <input type="text" class="form-control" placeholder="18/10/2017" aria-label="Username" aria-describedby="basic-addon1">
+            <span class="input-group-addon" id="basic-addon1">Hour:</span>
+            <input type="text" class="form-control ml-5" placeholder="number" aria-label="Username" aria-describedby="basic-addon1">
           </div>
-          <input type="submit" value="Book" class="btn btn-success mt-2" style="width: 100%">
+          <input type="submit" value="Book" class="btn btn-success mt-2 mb-3" style="width: 100%">
         </form>
       </div>
       <div>
         <h3>Details</h3>
         <div class="flex">
 
-          <div class="flex ml-3">
+          <div class="flex ml-3 mt-2">
             <i class="material-icons mr-2">€</i> <%= @photographer.price %>
           </div>
         </div>
@@ -44,9 +44,9 @@
           <h6 class="no-mb">Share</h6>
 
           <div class="flex">
-            <i class="fa fa-facebook-square fa-2x mr-2"></i>
-            <i class="fa fa-twitter-square fa-2x mr-2"></i>
-            <i class="fa fa-pinterest-square fa-2x mr-2"></i>
+            <i class="fab fa-facebook fa-2x mr-2"></i>
+            <i class="fab fa-twitter fa-2x mr-2"></i>
+            <i class="fab fa-pinterest fa-2x mr-2"></i>
             <i class="fa fa-envelope-square fa-2x"></i>
           </div>
         </div>
@@ -54,3 +54,66 @@
     </div>
   </div>
 </div>
+
+  <!-- Grid row -->
+<div class="row">
+
+  <!-- Grid column -->
+  <div class="col-md-12 d-flex justify-content-center mb-5">
+
+    <button type="button" class="btn btn-outline-dark btn-font mr-2" data-rel="all">All</button>
+    <button type="button" class="btn btn-outline-dark btn-font mr-2" data-rel="1">Portraits</button>
+    <button type="button" class="btn btn-outline-dark btn-font" data-rel="2">Lifestyle</button>
+
+  </div>
+  <!-- Grid column -->
+
+</div>
+<!-- Grid row -->
+
+<!-- Grid row -->
+<div class="gallery" id="gallery">
+
+  <!-- Grid column -->
+  <div class="mb-3 pics animation all 2">
+    <img class="img-fluid" src="https://mdbootstrap.com/img/Photos/Horizontal/Nature/4-col/img%20(73).jpg" alt="Card image cap">
+  </div>
+  <!-- Grid column -->
+
+  <!-- Grid column -->
+  <div class="mb-3 pics animation all 1">
+    <img class="img-fluid" src="https://mdbootstrap.com/img/Photos/Vertical/mountain1.jpg" alt="Card image cap">
+  </div>
+  <!-- Grid column -->
+
+  <!-- Grid column -->
+  <div class="mb-3 pics animation all 1">
+    <img class="img-fluid" src="https://mdbootstrap.com/img/Photos/Vertical/mountain2.jpg" alt="Card image cap">
+  </div>
+  <!-- Grid column -->
+
+  <!-- Grid column -->
+  <div class="mb-3 pics animation all 2">
+    <img class="img-fluid" src="https://mdbootstrap.com/img/Photos/Horizontal/Nature/4-col/img%20(35).jpg" alt="Card image cap">
+  </div>
+  <!-- Grid column -->
+
+  <!-- Grid column -->
+  <div class="mb-3 pics animation all 2">
+    <img class="img-fluid" src="https://mdbootstrap.com/img/Photos/Horizontal/Nature/4-col/img%20(18).jpg" alt="Card image cap">
+  </div>
+  <!-- Grid column -->
+
+  <!-- Grid column -->
+  <div class="mb-3 pics animation all 1">
+    <img class="img-fluid" src="https://mdbootstrap.com/img/Photos/Vertical/mountain3.jpg" alt="Card image cap">
+  </div>
+  <!-- Grid column -->
+
+</div>
+<!-- Grid row -->
+
+
+
+
+
