dropdown on avatar

--- a/app/views/partials/_navbar.html.erb
+++ b/app/views/partials/_navbar.html.erb
@@ -5,12 +5,18 @@
       </a>
     <ul class="navbar-nav mr-auto">
       <li class="nav-item active">
-        <a class="nav-link" href="/photographers">Find a Photographer</a>
+        <a id="list" class="nav-link" href="/photographers">Find a Photographer</a>
       </li>
 
       <li class="nav-item active">
+
+
         <a class="nav-link" href="#">About</a>
+
+    </select>
       </li>
+
+
     </ul>
     </div>
 
