--- a/app/views/partials/_navbarlog.html.erb
+++ b/app/views/partials/_navbarlog.html.erb
@@ -21,12 +21,18 @@
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
 
 
-   <ul class="navbar-nav mr-auto">
-      <li class="nav-item active">
-        <a href="/profile">
-          <img src="https://kitt.lewagon.com/placeholder/users/random" class="card-avatar avatar-bordered" />
-        </a>
-      </li>
+  <ul class="navbar-nav mr-auto">
+    <li class="nav-item active">
+      <div class="dropdown show">
+          <a class=" dropdown-toggle" id="dropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true" href="/profile" />
+            <img src="https://kitt.lewagon.com/placeholder/users/random" class="card-avatar avatar-bordered" />
+          </a>
+        <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
+            <a class="dropdown-item" href="#">Action</a>
+            <a class="dropdown-item" href="#">Another action</a>
+        </div>
+      </div>
+    </li>
 
 
 
