--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -5,9 +5,12 @@
     <%= f.error_notification %>
 
     <div class="form-inputs">
-      <%= f.input :email,
+      <%= f.input :name,
                   required: true,
                   autofocus: true,
+                  input_html: { autocomplete: "name" }%>
+      <%= f.input :email,
+                  required: true,
                   input_html: { autocomplete: "email" }%>
       <%= f.input :password,
                   required: true,
@@ -16,6 +19,8 @@
       <%= f.input :password_confirmation,
                   required: true,
                   input_html: { autocomplete: "new-password" } %>
+      <%= f.input :photo, as: :file, label:"Profile Picture" %>
+
     </div>
 
     <div class="form-actions">
