--- a/app/views/photographers/show.html.erb
+++ b/app/views/photographers/show.html.erb
@@ -18,9 +18,7 @@
       <div class="col-4">
         <div>
           <% if current_user == @photographer.user %>
-          <div>
-             <% render 'photographs/new', photographer: @photographer, photograph: @photograph  %>
-          </div>
+             <%= render 'photographs/new', photographer: @photographer, photograph: @photograph  %>
             <% else %>
               <h5 class="mb-3">Book this photographer!</h5>
               <h6 class="mb-3"><strong>Price <%= @photographer.price %> €/hour</strong></h6>
