--- a/app/views/photographs/_new.html.erb
+++ b/app/views/photographs/_new.html.erb
@@ -1,7 +1,4 @@
-<div id= "hello">
-hello
-<% simple_form_for [photographer, photograph] do |f|%>
-  <%= f.input :photo, as: :file, label:"Upload" %>
+<%= simple_form_for [photographer, photograph] do |f|%>
+  <%= f.input :photo, as: :file, input_html: { multiple: true }, label:"Upload" %>
   <%= f.submit "Upload photo", class: "btn btn-dark" %>
 <% end %>
-</div>
