photograph_tags model and controller done, need to do policies

--- a/app/views/photographers/show.html.erb
+++ b/app/views/photographers/show.html.erb
@@ -27,7 +27,7 @@
         </div>
 
         <div>
-          <div class="flex-align">
+          <div class="flex-align mt-4">
             <h6 class="no-mb">Share</h6>
 
             <div class="flex">
