--- a/app/views/photographs/show.html.erb
+++ b/app/views/photographs/show.html.erb
@@ -1,2 +1,12 @@
-<h1>Photographs#show</h1>
-<p>Find me in app/views/photographs/show.html.erb</p>
+<div class = "photo-container">
+  <div class="container">
+    <div class="row">
+      <div class="col-lg-10">
+        <%= cl_image_tag @photograph.photo.key, class: "display-photo" %>
+      </div>
+      <div class="col-lg-2">
+        This will be a tags sidebar
+      </div>
+    </div>
+  </div>
+</div>
