--- a/app/views/partials/_navbarlog.html.erb
+++ b/app/views/partials/_navbarlog.html.erb
@@ -3,15 +3,7 @@
       <a class="navbar-brand" href="/">
           <%= image_tag "photologo.png", class: "navbar-logo"%> Top Shots <!--Logo!-->
       </a>
-    <ul class="navbar-nav mr-auto">
-      <li class="nav-item active">
-        <a class="nav-link" href="/photographers">Find a Photographer</a>
-      </li>
 
-      <li class="nav-item active">
-        <a class="nav-link" href="#">My Bookings</a>
-      </li>
-    </ul>
     </div>
 
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -22,14 +14,28 @@
 
 
   <ul class="navbar-nav mr-auto">
+       <li class="nav-item active">
+        <form class="form-inline my-2 my-lg-0">
+  <input  class="form-control mr-sm-2"
+    type="search"
+    placeholder="Search"
+    aria-label="Search"
+   />
+   <button
+     class="btn btn-outline-dark btn-font my-2 my-sm-0"
+     type="submit">
+       Find a Photographer
+   </button>
+</form>
+</li>
     <li class="nav-item active">
       <div class="dropdown show">
-          <a class=" dropdown-toggle" id="dropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true" href="/profile" />
+          <a class=" dropdown-toggle" id="dropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true"  />
             <img src="https://kitt.lewagon.com/placeholder/users/random" class="card-avatar avatar-bordered" />
           </a>
         <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
-            <a class="dropdown-item" href="#">Action</a>
-            <a class="dropdown-item" href="#">Another action</a>
+            <a class="dropdown-item" href="/profile">My Profile</a>
+            <a class="dropdown-item" href="#">Log Out</a>
         </div>
       </div>
     </li>
