profile page not finished

--- a/app/assets/stylesheets/components/_profile.scss
+++ b/app/assets/stylesheets/components/_profile.scss
@@ -16,5 +16,81 @@
   margin-top: 90px;
   margin-bottom: 45px;
 }
+.profile_name{
+position: absolute;
+width: 563px;
+height: 42px;
+left: 242px;
+top: 167px;
+
+font-family: Montserrat;
+font-style: normal;
+font-weight: normal;
+font-size: 20px;
+line-height: 24px;
+
+color: #000000;
+}
+
+.avatar_profile_page{
+position: absolute;
+width: 108px;
+height: 105px;
+left: 66px;
+top: 157px;
+
+background: url(photo-1542103749-8ef59b94f47e.jpg);
+}
+
+.card_profile{
+position: absolute;
+width: 328px;
+height: 294px;
+left: 74px;
+top: 373px;
+}
+.your_ph_profile {
+position: absolute;
+width: 563px;
+height: 42px;
+left: 72px;
+top: 310px;
+
+font-family: Montserrat;
+font-style: normal;
+font-weight: normal;
+font-size: 16px;
+line-height: 20px;
+
+}
+.bookings{
+  position: absolute;
+width: 563px;
+height: 42px;
+left: 612px;
+top: 169px;
+font-family: Montserrat;
+font-style: normal;
+font-weight: normal;
+font-size: 20px;
+line-height: 24px;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
