profile page improved

--- a/app/assets/stylesheets/components/_button.scss
+++ b/app/assets/stylesheets/components/_button.scss
@@ -1,35 +1,35 @@
 .btn-font {
   font-family: Montserrat;
 }
-.btn-edit {
+// .btn-edit {
 
-position: absolute;
-width: 198px;
-height: 44px;
-left: 204px;
-top: 218px;
+// position: absolute;
+// width: 198px;
+// height: 44px;
+// left: 204px;
+// top: 218px;
 
 
-}
-.btn-new {
-position: absolute;
-width: 100px;
-height: 33px;
-left: 301px;
-top: 735px;
+// }
+// .btn-new {
+// position: absolute;
+// width: 100px;
+// height: 33px;
+// left: 301px;
+// top: 735px;
 
-}
-.btn-delete{
-position: absolute;
-width: 100px;
-height: 33px;
-left: 187px;
-top: 735px;
-}
-.btn-edit_photographer{
-position: absolute;
-width: 100px;
-height: 33px;
-left: 74px;
-top: 735px;
-}
+// }
+// .btn-delete{
+// position: absolute;
+// width: 100px;
+// height: 33px;
+// left: 187px;
+// top: 735px;
+// }
+// .btn-edit_photographer{
+// position: absolute;
+// width: 100px;
+// height: 33px;
+// left: 74px;
+// top: 735px;
+// }
