--- a/app/assets/stylesheets/components/_profile.scss
+++ b/app/assets/stylesheets/components/_profile.scss
@@ -17,11 +17,11 @@
   margin-bottom: 45px;
 }
 .profile_name{
-position: absolute;
+// position: absolute;
 width: 563px;
 height: 42px;
-left: 242px;
-top: 167px;
+// left: 242px;
+// top: 167px;
 
 font-family: Montserrat;
 font-style: normal;
@@ -32,29 +32,29 @@ line-height: 24px;
 color: #000000;
 }
 
-.avatar_profile_page{
-position: absolute;
-width: 108px;
-height: 105px;
-left: 66px;
-top: 157px;
+// .avatar_profile_page{
+// position: absolute;
+// width: 108px;
+// height: 105px;
+// left: 66px;
+// top: 157px;
 
-background: url(photo-1542103749-8ef59b94f47e.jpg);
-}
+// background: url(photo-1542103749-8ef59b94f47e.jpg);
+// }
 
 .card_profile{
-position: absolute;
+// position: absolute;
 width: 328px;
 height: 294px;
-left: 74px;
-top: 373px;
+// left: 74px;
+// top: 373px;
 }
 .your_ph_profile {
-position: absolute;
-width: 563px;
-height: 42px;
-left: 72px;
-top: 310px;
+// position: absolute;
+// width: 563px;
+// height: 42px;
+// left: 72px;
+// top: 310px;
 
 font-family: Montserrat;
 font-style: normal;
@@ -64,11 +64,11 @@ line-height: 20px;
 
 }
 .bookings{
-  position: absolute;
+  // position: absolute;
 width: 563px;
 height: 42px;
-left: 612px;
-top: 169px;
+// left: 612px;
+// top: 169px;
 font-family: Montserrat;
 font-style: normal;
 font-weight: normal;
