--- a/app/views/pages/profile.html.erb
+++ b/app/views/pages/profile.html.erb
@@ -1,30 +1,59 @@
 <div class="container mt-3">
- <!--  <h1>Your Profile</h1> -->
-  <p class="profile_name"><%= current_user.name %></p>
-  <img src="https://kitt.lewagon.com/placeholder/users/random" class="avatar-xl avatar_profile_page" />
-
-  <br>
-
+  <div class="row">
+    <div class="col-12 col-md-6">
+      <div class="d-flex" style="align-items: center;">
+        <div style="width: 150px; margin-right: 20px;">
+          <img src="https://kitt.lewagon.com/placeholder/users/random" class="avatar-xl" />
+        </div>
+        <div style="max-width: 250px;">
+          <p class="profile_name"><%= current_user.name %></p>
+          <%= link_to 'Edit User', edit_user_registration_path, class: "btn btn-outline-dark btn-edit" %>
+        </div>
+      </div>
+      <br>
       <% if !current_user.photographers.empty? %>
-      <% if current_user.photographers.length == 1 %>
-        <h3 class= "your_ph_profile">Your Photographer Profile</h3>
-      <% else %>
-        <h3 class= "your_ph_profile">Your Photographer Profiles</h3>
-      <% end %>
-    <% current_user.photographers.each do |photographer| %>
-       <div class="card_profile">
-          <%= render 'partials/card', photographer: photographer %>
+        <% if current_user.photographers.length == 1 %>
+          <h3 class= "your_ph_profile">Your Photographer Profile</h3>
+        <% else %>
+          <h3 class= "your_ph_profile">Your Photographer Profiles</h3>
         <% end %>
-       </div>
+        <% current_user.photographers.each do |photographer| %>
+          <div class="card_profile">
+            <%= render 'partials/card', photographer: photographer %>
+          </div>
+          <%= link_to 'Edit', edit_photographer_path(photographer), class: "btn btn-outline-dark btn-edit_photographer" %>
+          <%= link_to 'Delete',
+                photographer_path(photographer),
+                method: :delete,
+                data: { confirm: "Are you sure?" }, class: "btn btn-outline-dark btn-delete" %>
+        <% end %>
+        <%= link_to 'Create', new_photographer_path, class: "btn btn-outline-dark btn-new" %>
+      <% else %>
+        <%= link_to 'Create', new_photographer_path, class: "btn btn-outline-dark btn-new" %>
       <% end %>
-   </div>
+    </div>
 
-  <%= link_to 'Edit User', edit_user_registration_path, class: "btn btn-outline-dark btn-edit" %>
-  <%= link_to 'Create', new_photographer_path, class: "btn btn-outline-dark btn-new" %>
-  <%= link_to 'Delete', edit_user_registration_path, class: "btn btn-outline-dark btn-delete" %>
-  <%= link_to 'Edit', edit_user_registration_path, class: "btn btn-outline-dark btn-edit_photographer" %>
-
-
+    <div class="col-12 col-md-6">
+      <% if current_user.photographers.empty? %>
+        <p>No bookings yet!</p>
+      <% else %>
+        <% current_user.bookings.each do |booking| %>
+          <div class="card-horizontal">
+            <div class="card-horizontal-parcel">
+              <img src="https://kitt.lewagon.com/placeholder/users/random" class="avatar-large" alt="">
+            </div>
+            <div class="card-horizontal-parcel card-horizontal-center">
+              <h5><%= booking.photographer.name %></h5>
+              <p><%= booking.photographer.location %></p>
+            </div>
+            <div class="card-horizontal-parcel"><p><%= booking.total_price %> €</p></div>
+            <div class="card-horizontal-parcel"><%= link_to 'See profile', photographer_path(booking.photographer), class: "btn btn-dark btn-font" %></div>
+          </div>
+        <% end %>
+      <% end %>
+    </div>
+  </div>
+</div>
 <!--
     t.datetime "day" - string
     t.integer "total_price" integer
@@ -36,7 +65,7 @@
     t.datetime "updated_at", precision: 6, null: false
     t.integer "duration"
     t.index ["photographer_id"], name: "index_bookings_on_photographer_id"
-    t.index ["user_id"], name: "index_bookings_on_user_id" --> -->
+    t.index ["user_id"], name: "index_bookings_on_user_id" -->
 
 
 
