linked all buttons and add log out

--- a/app/assets/stylesheets/components/_banner.scss
+++ b/app/assets/stylesheets/components/_banner.scss
@@ -1,6 +1,6 @@
 .banner {
   background-size: cover;
-  height: 600px;
+  height: 85vh;
   background-position: center;
   padding: 150px 0;
   font-family: Montserrat;
