--- a/app/views/partials/_banner.html.erb
+++ b/app/views/partials/_banner.html.erb
@@ -5,6 +5,6 @@
   <div class="container">
     <h1>Top Shots showcases Photographers !</h1>
     <p>We connect photographers and customers, offering top level experiences</p>
-    <a type="button" class="btn btn-outline-light" class="nav-link" href="#">Sign up</a>
+    <a type="button" class="btn btn-outline-light" class="nav-link" href="/users/sign_up">Sign up</a>
   </div>
 </div>
