--- a/app/views/partials/_navbar.html.erb
+++ b/app/views/partials/_navbar.html.erb
@@ -11,38 +11,20 @@
   </button>
 
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
-
-
    <ul class="navbar-nav mr-auto">
-
       <li class="nav-item active">
         <form class="form-inline my-2 my-lg-0">
-  <input  class="form-control mr-sm-2"
-    type="search"
-    placeholder="Search"
-    aria-label="Search"
-   />
-   <button
-     class="btn btn-outline-dark btn-font my-2 my-sm-0"
-     type="submit">
-       Find a Photographer
-   </button>
-</form>
-</li>
-
-<li class="nav-item active">
-        <a type="button" class="btn btn-outline-dark btn-font" class="nav-link" href="/users/sign_in">Log in</a>
-        <a type="button" class="btn btn-dark btn-font" class="nav-link" href="/users/sign_up">Sign up</a>
+          <input  class="form-control mr-sm-2"
+            type="search"
+            placeholder="Search"
+            aria-label="Search"/>
+          <%= link_to 'Find a Photographer', photographers_path, class: "btn btn-outline-dark btn-font my-2 my-sm-0" %>
+        </form>
       </li>
 
-
-
-
-      <li class="nav-item dropdown">
-        <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
-          <a class="dropdown-item" href="#">Action</a>
-          <a class="dropdown-item" href="#">Another action</a>
-        </div>
+      <li class="nav-item active">
+        <a type="button" class="btn btn-outline-dark btn-font" class="nav-link" href="/users/sign_in">Log in</a>
+        <a type="button" class="btn btn-dark btn-font" class="nav-link" href="/users/sign_up">Sign up</a>
       </li>
     </ul>
   </div>
