--- a/app/views/partials/_navbarlog.html.erb
+++ b/app/views/partials/_navbarlog.html.erb
@@ -11,42 +11,26 @@
   </button>
 
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
-
-
-  <ul class="navbar-nav mr-auto">
-       <li class="nav-item active">
+    <ul class="navbar-nav mr-auto">
+      <li class="nav-item active">
         <form class="form-inline my-2 my-lg-0">
-  <input  class="form-control mr-sm-2"
-    type="search"
-    placeholder="Search"
-    aria-label="Search"
-   />
-   <button
-     class="btn btn-outline-dark btn-font my-2 my-sm-0"
-     type="submit">
-       Find a Photographer
-   </button>
-</form>
-</li>
-    <li class="nav-item active">
-      <div class="dropdown show">
-          <a class=" dropdown-toggle" id="dropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true"  />
-            <img src="https://kitt.lewagon.com/placeholder/users/random" class="card-avatar avatar-bordered" />
-          </a>
-        <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
-            <a class="dropdown-item" href="/profile">My Profile</a>
-            <a class="dropdown-item" href="#">Log Out</a>
-        </div>
-      </div>
-    </li>
+          <input  class="form-control mr-sm-2"
+            type="search"
+            placeholder="Search"
+            aria-label="Search"/>
+          <%= link_to 'Find a Photographer', photographers_path, class: "btn btn-outline-dark btn-font my-2 my-sm-0" %>
+        </form>
+      </li>
 
-
-
-
-      <li class="nav-item dropdown">
-        <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
-          <a class="dropdown-item" href="#">Action</a>
-          <a class="dropdown-item" href="#">Another action</a>
+      <li class="nav-item active">
+        <div class="dropdown show">
+            <a class=" dropdown-toggle" id="dropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true"  />
+              <img src="https://kitt.lewagon.com/placeholder/users/random" class="card-avatar avatar-bordered" />
+            </a>
+          <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
+              <a class="dropdown-item" href="/profile">My Profile</a>
+              <%= link_to 'Log Out', destroy_user_session_path, method: :delete, class: "dropdown-item" %>
+          </div>
         </div>
       </li>
     </ul>
