buttons, just buttons

--- a/app/assets/stylesheets/components/_button.scss
+++ b/app/assets/stylesheets/components/_button.scss
@@ -1,5 +1,10 @@
 .btn-font {
   font-family: Montserrat;
+  border: 0.5px solid #000000;
+  box-sizing: border-box;
+  border-radius: 8px;
+  font-size: 13px;
+  font-weight: 40;
 }
 // .btn-edit {
 
