--- a/app/assets/stylesheets/components/_button.scss
+++ b/app/assets/stylesheets/components/_button.scss
@@ -1,10 +1,13 @@
 .btn-font {
   font-family: Montserrat;
-  border: 0.5px solid #000000;
+  // border: 0.5px solid #000000;
   box-sizing: border-box;
   border-radius: 8px;
   font-size: 13px;
   font-weight: 40;
+    &:hover {
+    color: white;
+  }
 }
 // .btn-edit {
 
