--- a/app/views/pages/profile.html.erb
+++ b/app/views/pages/profile.html.erb
@@ -56,13 +56,13 @@
               </div>
               <div class="card-horizontal-parcel">
                 <% if !booking.confirmed %>
-                  <button type="button" class="btn btn-outline-success btn-font">Confirm</button>
+                  <button type="button" id="confirm" class="btn btn-outline-success btn-font">Confirm</button>
                   <button type="button" class="btn btn-outline-danger btn-font">Reject</button>
                 <% elsif !booking.completed %>
-                  <button class="btn btn-success btn-font">Confirmed</button>
-                  <button class="btn btn-outline-dark btn-font">Complete</button>
+                  <button type="button" class="btn btn-success btn-font">Confirmed</button>
+                  <button type="button" id="complete" class="btn btn-outline-dark btn-font">Complete</button>
                 <% else %>
-                  <button class="btn btn-dark btn-font">Done</button>
+                  <button type="button" class="btn btn-dark btn-font">Done</button>
                 <% end %>
               </div>
             </div>
