--- a/app/views/partials/_navbar.html.erb
+++ b/app/views/partials/_navbar.html.erb
@@ -15,6 +15,7 @@
       <li class="nav-item active">
         <form class="form-inline my-2 my-lg-0">
           <input  class="form-control mr-sm-2"
+            name="query"
             type="search"
             placeholder="Search"
             aria-label="Search"/>
