--- a/app/views/partials/_navbar.html.erb
+++ b/app/views/partials/_navbar.html.erb
@@ -13,14 +13,14 @@
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
    <ul class="navbar-nav mr-auto">
       <li class="nav-item active">
-        <form class="form-inline my-2 my-lg-0">
-          <input  class="form-control mr-sm-2"
-            name="query"
-            type="search"
-            placeholder="Search"
-            aria-label="Search"/>
-          <%= link_to 'Find a Photographer', photographers_path, class: "btn btn-outline-dark btn-font my-2 my-sm-0" %>
-        </form>
+        <%= form_tag photographers_path, method: :get, class: "form-inline my-2 my-lg-0" do %>
+          <%= text_field_tag :query,
+            params[:query],
+            class: "form-control mr-sm-2 btn-font",
+            placeholder: "Search"
+          %>
+          <%= submit_tag "Find a Photographer", class: "btn btn-outline-dark btn-font my-2 my-sm-0" %>
+        <% end %>
       </li>
 
       <li class="nav-item active">
