--- a/app/views/photographers/show.html.erb
+++ b/app/views/photographers/show.html.erb
@@ -44,26 +44,31 @@
 <div>
   <div class="row">
     <div class="column">
-  <% @photographs.each do |photograph| %>
-            <%= render 'photographs/show', photographer: photographer %>
-          <% end %>
+
+      <% @photographer.photographs.each do |photograph| %>
+            <%= cl_image_tag photograph.photo.key %>
+      <% end %>
+
+      <%= image_tag("https://picsum.photos/id/#{rand(1000)}/300/200") %>
+      <%= image_tag("https://picsum.photos/id/#{rand(1000)}/300/200") %>
+
     </div>
 
     <div class="column">
-  <%= image_tag("https://mymodernmet.com/wp/wp-content/uploads/2018/10/Mou-Aysha-portrait-photography-3.jpg") %>
-  <%= image_tag("https://i.pinimg.com/originals/03/33/21/033321112df5d5a0392082517cbe5143.jpg") %>
+      <%= image_tag("https://mymodernmet.com/wp/wp-content/uploads/2018/10/Mou-Aysha-portrait-photography-3.jpg") %>
+      <%= image_tag("https://i.pinimg.com/originals/03/33/21/033321112df5d5a0392082517cbe5143.jpg") %>
     </div>
 
       <div class="column">
-  <%= image_tag("https://picsum.photos/id/#{rand(1000)}/300/200") %>
-  <%= image_tag("https://picsum.photos/id/#{rand(1000)}/300/200") %>
-  <%= image_tag("https://picsum.photos/id/#{rand(1000)}/300/200") %>
-  <%= image_tag("https://picsum.photos/id/#{rand(1000)}/300/200") %>
+      <%= image_tag("https://picsum.photos/id/#{rand(1000)}/300/200") %>
+      <%= image_tag("https://picsum.photos/id/#{rand(1000)}/300/200") %>
+      <%= image_tag("https://picsum.photos/id/#{rand(1000)}/300/200") %>
+      <%= image_tag("https://picsum.photos/id/#{rand(1000)}/300/200") %>
     </div>
 
     <div class="column">
-  <%= image_tag("https://mymodernmet.com/wp/wp-content/uploads/2018/10/Mou-Aysha-portrait-photography-3.jpg") %>
-  <%= image_tag("https://i.pinimg.com/originals/03/33/21/033321112df5d5a0392082517cbe5143.jpg") %>
+      <%= image_tag("https://i.pinimg.com/originals/dd/59/4e/dd594e241abf617abed2b7d586c19ef9.jpg") %>
+      <%= image_tag("https://renuarlocaj.com/wp-content/uploads/2019/12/Genta-Portrait-Photography-Beauty-Photography-Make-Up-Ujvara-Hajdari-Photographer-Renuar-Locaj-1.jpg") %>
     </div>
 
   </div>
