--- a/app/views/partials/_card.html.erb
+++ b/app/views/partials/_card.html.erb
@@ -6,7 +6,8 @@
       <p><%= photographer.location %></p>
     </div>
     <h2 class="card-pricing"><%= photographer.price %> €</h2>
-    <img src="https://kitt.lewagon.com/placeholder/users/random" class="card-avatar avatar-bordered" />
+    <!-- <img src="https://kitt.lewagon.com/placeholder/users/random" class="card-avatar avatar-bordered" /> -->
+    <%= cl_image_tag photographer.user.photo.key, height: 40, width: 40, crop: :thumb, gravity: :face, class: "card-avatar avatar-bordered" %>
   </div>
 </div>
 
