--- a/app/views/photographers/show.html.erb
+++ b/app/views/photographers/show.html.erb
@@ -1,6 +1,7 @@
 <div class="banner_profile" style="background-image: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4)), url('https://images.unsplash.com/photo-1536632087471-3cf3f2986328?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1655&q=80')"></div>
 <div class="overall-container" style="max-width: 1350px; margin: 0 auto;">
-  <img src="https://kitt.lewagon.com/placeholder/users/random" class="avatar-xl avatar_profile" />
+  <%= cl_image_tag @photographer.user.photo.key, height: 150, width: 150, crop: :thumb, gravity: :face, class: "avatar-xl avatar_profile" %>
+  <!-- <img src="https://kitt.lewagon.com/placeholder/users/random" class="avatar-xl avatar_profile" /> -->
   <div class="container" id="content_profile"> <!-- margin-top-negative -->
     <div class="row">
       <div class="col-8">
