fixed a bug where the photographer card showed incorrectly if photograper had no photos now shows a placeholder

--- a/app/views/partials/_card.html.erb
+++ b/app/views/partials/_card.html.erb
@@ -1,6 +1,8 @@
 <div class="card">
   <% if photographer.photographs[0] %>
     <%= cl_image_tag photographer.photographs[0].photo.key %>
+    <% else %>
+    <%= image_tag("https://picsum.photos/id/#{rand(1000)}/300/200") %>
   <% end %>
   <div class="card-infos">
     <div>
